Reformat all java files using spotless