@@ -1,11 +1,13 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright (c) 2022 vitasystems GmbH and Hannover Medical School.
+ *
+ * This file is part of project openEHR_SDK
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *     https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,7 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.ehrbase.webtemplate.util;
 
 import java.util.Collections;
@@ -27,42 +28,41 @@ import org.ehrbase.webtemplate.model.WebTemplateNode;
  */
 public class WebTemplateUtils {
 
-  private WebTemplateUtils() {
-  }
+    private WebTemplateUtils() {}
 
-  /**
-   * Return whether the node is a choice between <code>DV_CODED_TEXT</code> and
-   * <code>DV_TEXT</code>.
-   *
-   * @param node the node to check
-   * @return <code>true</code> if the provided input is choice; <code>false</code>
-   * otherwise
-   */
-  public static boolean isChoiceDvCodedTextAndDvText(WebTemplateNode node) {
-    List<String> childrenIds = getTrueChildrenElement(node).stream()
-        .map(WebTemplateNode::getId)
-        .collect(Collectors.toList());
+    /**
+     * Return whether the node is a choice between <code>DV_CODED_TEXT</code> and
+     * <code>DV_TEXT</code>.
+     *
+     * @param node the node to check
+     * @return <code>true</code> if the provided input is choice; <code>false</code>
+     * otherwise
+     */
+    public static boolean isChoiceDvCodedTextAndDvText(WebTemplateNode node) {
+        List<String> childrenIds = getTrueChildrenElement(node).stream()
+                .map(WebTemplateNode::getId)
+                .collect(Collectors.toList());
 
-    return childrenIds.size() == 2
-        && childrenIds.containsAll(List.of("coded_text_value", "text_value"))
-        && node.getChoicesInChildren().size() > 0;
-  }
-
-  /**
-   * Return the list of "true" children for the node.
-   *
-   * @param node the node to check
-   * @return the list of "true" children
-   */
-  public static List<WebTemplateNode> getTrueChildrenElement(WebTemplateNode node) {
-    if (!RmConstants.ELEMENT.equals(node.getRmType())) {
-      return Collections.emptyList();
+        return childrenIds.size() == 2
+                && childrenIds.containsAll(List.of("coded_text_value", "text_value"))
+                && node.getChoicesInChildren().size() > 0;
     }
 
-    return node.getChildren().stream()
-        .filter(childNode -> !"name".equals(childNode.getName()))
-        .filter(childNode -> !List.of("null_flavour", "feeder_audit").contains(childNode.getName())
-            || !childNode.isNullable())
-        .collect(Collectors.toList());
-  }
+    /**
+     * Return the list of "true" children for the node.
+     *
+     * @param node the node to check
+     * @return the list of "true" children
+     */
+    public static List<WebTemplateNode> getTrueChildrenElement(WebTemplateNode node) {
+        if (!RmConstants.ELEMENT.equals(node.getRmType())) {
+            return Collections.emptyList();
+        }
+
+        return node.getChildren().stream()
+                .filter(childNode -> !"name".equals(childNode.getName()))
+                .filter(childNode -> !List.of("null_flavour", "feeder_audit").contains(childNode.getName())
+                        || !childNode.isNullable())
+                .collect(Collectors.toList());
+    }
 }
